# comprobo2014

./: README.md  cc_map.pgm  set_video_mode.sh  start_adhoc.sh  start_managed.sh
exercises/linear_quadratic_regulator/: Spacecraft.ipynb
exercises/object_recognition/: download_caltech_101.sh  get_features.py  learn_bow_model.py  learn_bow_model_nonlinear.py  learn_color_model.py  learn_simple_model.py
exercises/object_recognition/phow_caltech101/: phow_caltech101.py
exercises/reinforcement_learning/: 4x5.txt  easy_cartpole.py  gridworld.py  harder_cartpole.py  monte_carlo_policy_iteration.py  puddle_world.py  simple_policy_iteration.py  supereasy_cartpole.py
src/gscam/examples/: raspi_nodelet_udp.launch
src/gscam/scripts/: setup_udp_stream.py
src/my_pf/: cc_map.yaml  my_pf  package.xml
src/my_pf/launch/: get_STAR_ground_truth.launch
src/my_pf/rviz/: STAR_center.rviz
src/my_pf/scripts/: README.txt  pf_level1.py  pf_level1_final.py  pf_level1_oct9.py  star_center_position.py
src/neato_robot/neato_node/: CMakeLists.txt  package.xml
src/neato_robot/neato_node/launch/: bringup_minimal_symmetric.launch  bringup_symmetric.launch
src/neato_robot/neato_node/nodes/: neato.py  neato_symmetric.py
src/neato_wee/: controller_section1.py  wall_withslider.py
src/warmup_project/: avoid_obstacle.py  package.xml  wall_follower.py  wall_follower.py~  warmupprojectwriteup.odt
src/wee_warmup_project/: .~lock.CompRobo_Warmup_writeup.odt#  CMakeLists.txt  CompRobo_Warmup_writeup.odt  package.xml  wallfollowing_warmuplab_comprobo.ogv
(+14 files in other folders)
